3992.	[func]		DiG can now send queries without questions
			(dig +header-only). [RT #37599]

3991.	[func]		Add the ability to buffer logging output by specifying
			"buffered yes;" when defining a channel. [RT #26561]

3990.	[testing]	Add tests for unknown DNSSEC algorithm handling.
			[RT #37541]

3989.	[cleanup]	Remove redundent dns_db_resigned calls. [RT #35748]

3988.	[func]		Allow the zone serial of a dynamically updatable
			zone to be updated via "rndc signing -serial".
			[RT #37404]

3987.	[func]		Handle future Visual Studio 14 incompatible changes.
			[RT #37380]

3986.	[doc]		Add the BIND version number to page footers
			in the ARM. [RT #37398]

3985.	[doc]		Describe how +ndots and +search interact in dig.
			[RT #37529]

3984.	[func]		Accept 256 byte long PINs in native PKCS#11
			crypto. [RT #37410]

3983.	[bug]		Change #3940 was incomplete: negative trust anchors
			could be set to last up to a week, but the
			"nta-lifetime" and "nta-recheck" options were
			still limited to one day. [RT #37522]

3982.	[doc]		Include release notes in product documentation.
			[RT #37272]

3981.	[bug]		Cache DS/NXDOMAIN independently of other query types.
			[RT #37467]

3980.	[bug]		Improve --with-tuning=large by self tuning of SO_RCVBUF
			size. [RT #37187]

3979.	[bug]		Negative trust anchor fetches were not properly
			managed. [RT #37488]

3978.	[test]		Added a unit test for Diffie-Hellman key
			computation, completing change #3974. [RT #37477]

3977.	[cleanup]	"rndc secroots" reported a "not found" error when
			there were no negative trust anchors set. [RT #37506]

3976.	[bug]		When refreshing managed-key trust anchors, clear
			any cached trust so that they will always be
			revalidated with the current set of secure
			roots. [RT #37506]

3975.	[bug]		Don't populate or use the bad cache for queries that
			don't request or use recursion. [RT #37466]

3974.	[bug]		Handle DH_compute_key() failure correctly in
			openssldh_link.c. [RT #37477]
